[gd_scene load_steps=10 format=3 uid="uid://dde6xxgj0mi5n"]

[ext_resource type="Script" path="res://Scripts/boomerang.gd" id="1_1lbp8"]
[ext_resource type="Texture2D" uid="uid://bbfeulll4m624" path="res://Sprites/boomerang_sheet.png" id="1_4bnju"]
[ext_resource type="PackedScene" uid="uid://dlkgpec0i5acn" path="res://Scenes/Components/enemy_determiner.tscn" id="3_sxnan"]
[ext_resource type="AudioStream" uid="uid://ecvqjm1swido" path="res://Sound Effects/block_hit.wav" id="4_xcf3a"]

[sub_resource type="CircleShape2D" id="CircleShape2D_661wf"]
radius = 8.0

[sub_resource type="Animation" id="Animation_2fj61"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_u1u6y"]
resource_name = "spin"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_weh6w"]
_data = {
"RESET": SubResource("Animation_2fj61"),
"spin": SubResource("Animation_u1u6y")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_hj4kt"]
radius = 9.0

[node name="Boomerang" type="RigidBody2D"]
collision_layer = 16
collision_mask = 0
gravity_scale = 0.0
lock_rotation = true
linear_velocity = Vector2(150, -5)
script = ExtResource("1_1lbp8")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = 4
texture = ExtResource("1_4bnju")
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_661wf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_weh6w")
}
autoplay = "spin"

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_hj4kt")

[node name="EnemyDeterminer" parent="." instance=ExtResource("3_sxnan")]

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(8.9407e-08, -8.9407e-08)
scale = Vector2(0.9, 0.9)

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_xcf3a")
pitch_scale = 1.4

[node name="DespawnTimer" type="Timer" parent="."]
one_shot = true

[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_despawn_timer_timeout"]
